[221009] carbom calc - tour

--- a/code/kyunghoon/dijkstra.ipynb
+++ b/code/kyunghoon/dijkstra.ipynb
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -659,83 +659,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'A2': 0, 'A3': 0, 'A4': 0, 'A5': 0, 'A12': 0}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# [TODO] Dijkstra\n",
-    "a=[]\n",
-    "for comb in combinations(recommended_tour, 2):\n",
-    "    if comb[0] not in a:\n",
-    "        a.append(comb[0])\n",
-    "    else:\n",
-    "        pass\n",
-    "\n",
-    "dijk = {string:0 for string in a}\n",
-    "\n",
-    "print(dijk)"
+    "# graph = {\n",
+    "#     'A': {'B': 8, 'C': 1, 'D': 2},\n",
+    "#     'B': {},\n",
+    "#     'C': {'B': 5, 'D': 2},\n",
+    "#     'D': {'E': 3, 'F': 5},\n",
+    "#     'E': {'F': 1},\n",
+    "#     'F': {'A': 5}\n",
+    "# }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A2\n",
-      "A2\n",
-      "A2\n",
-      "A2\n",
-      "A2\n",
-      "A3\n",
-      "A3\n",
-      "A3\n",
-      "A3\n",
-      "A4\n",
-      "A4\n",
-      "A4\n",
-      "A5\n",
-      "A5\n",
-      "A12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cnt = 0\n",
-    "for comb in combinations(recommended_tour, 2):\n",
-    "    cnt = cnt +1\n",
-    "    if comb[0] in dijk.keys():\n",
-    "        print(comb[0])\n",
-    "    else:\n",
-    "        pass\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(cnt)"
+    "# https://justkode.kr/algorithm/python-dijkstra\n",
+    "\n",
+    "import heapq  # 우선순위 큐 구현을 위함\n",
+    "\n",
+    "def dijkstra(graph, start):\n",
+    "  distances = {node: float('inf') for node in graph}  # start로 부터의 거리 값을 저장하기 위함\n",
+    "  distances[start] = 0  # 시작 값은 0이어야 함\n",
+    "  queue = []\n",
+    "  heapq.heappush(queue, [distances[start], start])  # 시작 노드부터 탐색 시작 하기 위함.\n",
+    "\n",
+    "  while queue:  # queue에 남아 있는 노드가 없으면 끝\n",
+    "    current_distance, current_destination = heapq.heappop(queue)  # 탐색 할 노드, 거리를 가져옴.\n",
+    "\n",
+    "    if distances[current_destination] < current_distance:  # 기존에 있는 거리보다 길다면, 볼 필요도 없음\n",
+    "      continue\n",
+    "    \n",
+    "    for new_destination, new_distance in graph[current_destination].items():\n",
+    "      distance = current_distance + new_distance  # 해당 노드를 거쳐 갈 때 거리\n",
+    "      if distance < distances[new_destination]:  # 알고 있는 거리 보다 작으면 갱신\n",
+    "        distances[new_destination] = distance\n",
+    "        heapq.heappush(queue, [distance, new_destination])  # 다음 인접 거리를 계산 하기 위해 큐에 삽입\n",
+    "    \n",
+    "  return distances"
    ]
   },
   {
